# python-gh-workflows

./: .gitignore  .pre-commit-config.yaml  .release-please-config.json  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: auto-merge.yml  format.yml  label-feature-pr.yml  lint.yml  release-please.yml  test.yml
src/: bootstrap_venv.py  hello_world.py
test/: test_hello_world.py
