[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grpy-gh-actions"
version = "0.0.0"
description = "A Python project for demomstrating GitHub workflows that lint, test, and version a codebase"
authors = [
    {name = "Brooks Robertson", email = "brooksjbr@protonmail.ch"},
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = [
    "GitHub",
    "workflows",
    "actions"
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "black>=22.0",
    "flake8>=4.0",
    "Flake8-pyproject>=1.2.3"
]

[tool.hatch.build]
include = [
    "src",
    "tests",
    "README.md"
]
exclude = [
    "*.pyc",
    "/.git",
    "/.pytest_cache",
]

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'

[tool.flake8]
max-line-length = 100
