[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-gh-workflows"
version = "0.2.0"
description = "A Python project for demomstrating GitHub workflows that lint, test, and version a codebase"
authors = [
    {name = "Brooks Robertson", email = "brooksjbr@protonmail.ch"},
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = [
    "GitHub",
    "workflows",
    "actions"
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "black>=22.0",
    "flake8>=4.0",
    "pyproject-flake8>=7.0.0",
    "pytest>=6.0",
    "pre_commit>=4.3.0"
]

[tool.hatch.build]
include = [
    "src",
    "test",
    "README.md"
]
exclude = [
    "*.pyc",
    "/.git",
    "/.github",
    "/.pytest_cache",
]

[tool.black]
target-version = ['py39']
include = '\.pyi?$'

[tool.flake8]
max-line-length = 100
extend-ignore = "E203"
max-complexity = 10
